--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
     <p> nunca, jamais desista de suas ambições e sonhos! </p> <!-- frase motivacional 1 -->
-
     
+    <p> se estiver ansioso, escute seu coração com calma, 
+        o seu verdadeiro eu, e veja o mundo com indiferença, 
+        pois se cada evento incontrolável natural ocorrer, 
+        e você se deixar abalar, então você será tomado pela tempestade alheia. 
+
+    </p> <!-- frase motivacional 2 -->
     
 </body>
 </html>
