--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         e você se deixar abalar, então você será tomado pela tempestade alheia. 
 
     </p> <!-- frase motivacional 2 -->
-    
+
+    <p>
+        aceite a realidade como ela é. A sua imaginação é mais aterrorizante do que a realidade em si. 
+    </p>
+    <!-- frase motivacional 3 (acho que não)-->
 </body>
 </html>
